--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -140,9 +140,39 @@ jobs:
         make -j$(nproc) || make -j1 || make -j1 V=s
         echo "compile_status=success" >> $GITHUB_ENV
 
-    - name : Upload packages
-      uses: actions/upload-artifact@master
-      if: always()
+    # - name : Upload packages
+      # uses: actions/upload-artifact@master
+      # if: always()
+      # with:
+        # name: AX6-NSS
+        # path: openwrt/bin/targets
+    # - name: mv output to upload file
+      # run: |
+        # df -hT
+        # mkdir upload
+        # cp openwrt/bin/targets/qualcommax/ipq807x/*  upload/     
+
+    - name: Upload OpenWrt Firmware to Release
+      uses: ncipollo/release-action@main
+      if: ${{ env.PACKAGED_STATUS == 'success' }} && !cancelled()
       with:
-        name: AX6-NSS
-        path: openwrt/bin/targets
+        tag: A6X-NSS_${{ env.PACKAGED_OUTPUTDATE }}
+        artifacts: openwrt/bin/targets/qualcommax/ipq807x/*
+        allowUpdates: true
+        token: ${{ secrets.GITHUB_TOKEN }}
+        body: |
+          基于VIKINGYFY合并的immortalwrt构建
+          首次使用建议全新刷写
+          NSS满血加速！
+          * 基本信息
+          IP: 192.168.1.1
+          账户: root
+          密码: 空
+          
+    - name: Delete old releases
+      uses: dev-drprasad/delete-older-releases@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        keep_latest: 10
+        delete_tags : true
