--- a/.github/workflows/build-AX6-IPQ.yml
+++ b/.github/workflows/build-AX6-IPQ.yml
@@ -140,9 +140,42 @@ jobs:
         make -j$(nproc) || make -j1 || make -j1 V=s
         echo "compile_status=success" >> $GITHUB_ENV
 
-    - name : Upload packages
-      uses: actions/upload-artifact@master
-      if: always()
+    # - name : Upload packages
+      # uses: actions/upload-artifact@master
+      # if: always()
+      # with:
+        # name: AX6-IPQ
+        # path: openwrt/bin/targets
+    - name: cp output to upload file
+      run: |
+        df -hT
+        mkdir upload
+        cp openwrt/bin/targets/*/*/*.ubi upload/
+        cp openwrt/bin/targets/*/*/*.bin upload/
+        
+    - name: Get Current Date
+      run: echo "CURRENT_DATE=$(date '+%Y%m%d%H%M%S')" >> $GITHUB_ENV
+      
+    - name: Upload OpenWrt Firmware to Release
+      uses: ncipollo/release-action@main
       with:
-        name: AX6-IPQ
-        path: openwrt/bin/targets
+        tag: AX6_IPQ_${{ env.CURRENT_DATE }}
+        artifacts: upload/*
+        allowUpdates: true
+        token: ${{ secrets.GITHUB_TOKEN }}
+        body: |
+          基于LiBwrt的openwrt代码构建
+          首次使用建议全新刷写
+          是否有NSS加速自己测试！
+          * 基本信息
+          IP: 192.168.1.1
+          账户: root
+          密码: password
+          
+    - name: Delete old releases
+      uses: dev-drprasad/delete-older-releases@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        keep_latest: 10
+        delete_tags : true
