--- a/AX6-IPQ/.config
+++ b/AX6-IPQ/.config
@@ -2907,7 +2907,7 @@ CONFIG_PACKAGE_kmod-udptunnel6=y
 # CONFIG_PACKAGE_kmod-veth is not set
 # CONFIG_PACKAGE_kmod-vrf is not set
 CONFIG_PACKAGE_kmod-vxlan=y
-# CONFIG_PACKAGE_kmod-wireguard is not set
+CONFIG_PACKAGE_kmod-wireguard=y
 # end of Network Support
 
 #
